--- a/app/assets/stylesheets/farmers/_show.scss
+++ b/app/assets/stylesheets/farmers/_show.scss
@@ -30,3 +30,19 @@
     color: black;
   }
 }
+
+.map-btn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+#show-map-btn {
+  padding: 1%;
+  text-align: center;
+  text-decoration: none;
+}
+
+#map {
+  width: 100%;
+  height: 600px;
+}
