--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
         <li class="nav-item"> <%= link_to "", restaurant_cart_path, class: "nav-link fas fa-shopping-cart", style: 'padding: 15px 20px; font-size: 25px; margin-right: 10px'%></li>
     <% end %>
     <% if current_user.role == "Farmer" %>
-        <li class="nav-item"> <%= link_to "My profile", farmer_path(curren_user.farmer), class: "nav-link", style: 'padding: 15px 20px'%></li>           
+        <li class="nav-item"> <%= link_to "My profile", farmer_path(current_user.farmer), class: "nav-link", style: 'padding: 15px 20px'%></li>           
         <li class="nav-item"> <%= link_to "Add a product", new_product_path, class: "nav-link", style: 'padding: 15px 20px'%></li>
     <% end %>
       <li class="nav-item dropdown">
