add stripe as a payment method

--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -11,7 +11,10 @@
 }
 
 .cards-container {
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     // margin: 0 auto;
 }
 
