--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -36,7 +36,7 @@
 
         <div class='cards-container'>
         <% @products.each do |product| %>
-                <div class="col-lg-4">
+                
                 <div class='product-card'>
                     <div class='card-img' style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url('<%= cl_image_path product.product_photos.first.data, height: 160, width: 335, crop: :fill %>')">
                         <% if current_user.role == "Restaurant" %>
@@ -52,11 +52,11 @@
                         </div>
                         <div class='rows'>
                             <p>⭐️️️️️️️⭐️⭐️⭐️<%=product.rating%> </p>
-                            <p>$<%=product.price%> / <small><%=product.unit_of_measurement%></small></p>
+                            <p><%= humanized_money_with_symbol(product.price) %> / <small><%=product.unit_of_measurement%></small></p>
                         </div>
                     </div>
                 </div>
-                </div>
+                
 
             <% end %>
         </div>
