--- a/app/assets/stylesheets/farmers/_show.scss
+++ b/app/assets/stylesheets/farmers/_show.scss
@@ -43,6 +43,9 @@
 }
 
 #map {
-  width: 100%;
+  
+  width: 91%;
   height: 600px;
+  margin: 0 auto;
+  box-shadow: 0px 4px 24px rgba($color: #000000, $alpha: 0.3);
 }
