Finished implementing functional cart updated

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -38,6 +38,7 @@
 .name-location {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .profile-infos .profile-avatar {
