--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -46,6 +46,9 @@
   font-family: "Raleway", "Helvetica", "sans-serif";
   font-weight: bold;
   font-size: 16px;
+  position: sticky;
+  z-index: 1;
+  top: 0;
 }
 
 .float-list {
