--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,7 @@
 }
 
 .banner h1 {
-  margin-top: 36px;
+  // margin-top: 36px;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
   font-size: 44px;
