--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,14 @@
     <% unless current_page?(root_path) %>
       <%= render 'shared/navbar' %>
     <% end %>
-
+    
+    <% flash.each do |name, msg| %>
+      <div class="alert alert-<%=name%>" role="alert">
+        <%= msg %>
+      </div>
+    <% end %>
     <%= yield %>
-
+    <%= debug(params) if Rails.env.development? %>
     <p class="notice" style="margin:0px;"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= javascript_include_tag 'application' %>
