--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,6 +48,17 @@
       <h3>Search</h3>
       <p>Search local and fresh food by product category or farmer</p>
     </div>
+    <div class="step-1">
+      <i class="far fa-hand-pointer"></i>
+      <h3>Choose</h3>
+      <p>Choose flexible quantities according to your changing needs</p>
+    </div>
+    <div class="step-1">
+      <i class="fas fa-truck"></i>
+      <h3>Delivery</h3>
+      <p>Get your products delivered directly to your restaurant</p>
+    </div>
+  </div>
 </section>
 
 <section id="customer" class="customer">
