added styling to the add and minus in card

--- a/app/views/orders/my_active_order.html.erb
+++ b/app/views/orders/my_active_order.html.erb
@@ -24,6 +24,7 @@
             </div>
             <div class= "price-each">
               <span>Each: €</span><p class="price" style="display:inline"> <%= order_product.product.price %></p>
+              <% raise %>
             </div>
             <p>Seller: <%= link_to farmer_path(order_product.product.farmer), class:'profile-link hvr-icon-wobble-horizontal', style:'margin-bottom: 3px;' do %>
                 <%= order_product.product.farmer.name %><i class="fa fa-arrow-right hvr-icon" style="margin-left: 8px;"></i>
@@ -45,7 +46,7 @@
       <div class="checkout-detail">
         <p><strong>Shipping cost:</strong></p>
         <div class="subtotal-cart">
-          <span class="shipping"><%= @shipment %></span>/€
+          <span class="shipping"><%= 50 %></span>/€
         </div>
       </div>
       <div class="checkout-detail">
