--- a/app/assets/stylesheets/pages/_my_active_order.scss
+++ b/app/assets/stylesheets/pages/_my_active_order.scss
@@ -13,6 +13,15 @@
   margin-bottom: 50px;
 }
 
+.plus {
+  color: black;
+  font-size: 18px
+}
+
+.minus {
+  color: black;
+  font-size: 18px
+}
 
 .card-product img {
   height: 100%;
