--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,31 +3,31 @@
   height:50px;
   text-decoration: none;
   font-size: 24;
-  border: 1px solid #33903f;
-  color: #33903f;
+  border: 1px solid #384D48;
+  color: #384D48;
   border-radius: 8px;
   transition: 0.3s
 }
 
 .btn-f:hover{
   color: white;
-  background-color: #33903f;
-  
+  background-color: #384D48;
+
 }
 
 .btn-f-d{
   width: 150px;
   height:50px;
   color: white;
-  background-color: #33903f;
+  background-color: #384D48;
   font-size: 24;
-  border: 1px solid #33903f;
+  border: 1px solid #384D48;
   border-radius: 5px;
   transition: 0.3s;
 }
 
 .btn-f-d:hover{
-  color: #33903f;
+  color: #384D48;
   border-radius: 5px;
   transition: 0.3s;
   background: white;
