--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,12 +2,13 @@
     .navbar-lewagon {
     justify-content: space-between;
     background: white;
+    border-bottom: 3px #384D48 solid;
     }
 
     .navbar-lewagon .navbar-collapse {
     flex-grow: 0;
     }
-    
+
 </style>
 
 <% if user_signed_in? %>
@@ -27,11 +28,11 @@
         <%= link_to "Market", products_path, class: "nav-link", style: 'padding: 15px 20px'%>
       </li>
       <% if current_user.role == "Restaurant" && current_user.restaurant.present? %>
-        <li class="nav-item"> <%= link_to "My Orders", restaurant_orders_path, class: "nav-link", style: 'padding: 15px 20px'%></li>           
+        <li class="nav-item"> <%= link_to "My Orders", restaurant_orders_path, class: "nav-link", style: 'padding: 15px 20px'%></li>
         <li class="nav-item"> <%= link_to "", restaurant_cart_path, class: "nav-link fas fa-shopping-cart", style: 'padding: 15px 20px; font-size: 25px; margin-right: 10px'%></li>
     <% end %>
     <% if current_user.role == "Farmer" && current_user.farmer.present? %>
-        <li class="nav-item"> <%= link_to "My profile", farmer_path(current_user.farmer), class: "nav-link", style: 'padding: 15px 20px'%></li>           
+        <li class="nav-item"> <%= link_to "My profile", farmer_path(current_user.farmer), class: "nav-link", style: 'padding: 15px 20px'%></li>
         <li class="nav-item"> <%= link_to "Add a product", new_product_path, class: "nav-link", style: 'padding: 15px 20px'%></li>
     <% end %>
       <li class="nav-item dropdown">
