--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -77,8 +77,8 @@
 
                         <div class='card-details'>
                             <div class='rows'>
-                                <h4><%= product.name %></h4>
-                                <%= link_to cl_image_tag(product.farmer.user.avatar, class: 'photo-card avatar', crop: :fill, height: 50), farmer_path(product.farmer)%>
+                                <h4 class="product-name"><%= product.name %></h4>
+                                <%= link_to cl_image_tag(product.farmer.user.avatar, class: 'photo-card avatar link-name', crop: :fill, height: 50), farmer_path(product.farmer)%>
                             </div>
                             <div class='rows'>
                                 <p>⭐️️️️️️️⭐️⭐️⭐️<%=product.rating%> </p>
