--- a/app/views/orders/my_orders.html.erb
+++ b/app/views/orders/my_orders.html.erb
@@ -1,6 +1,44 @@
-<% @paid_orders.each do |order| %>
-<%= order  %>
-<%= order.status %>
-<%= link_to "View order details", order_path(order) %>
-<% end %>
+<style>
+    .order-container {
+        width: 1320px;
+        margin: 40px auto;
+        /* margin-top: 20px; */
+    }
 
+    .order-card {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        /* box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); */
+        border-bottom: 1px solid grey;
+        /* margin-top: 20px; */
+        padding: 40px 30px;
+    }
+
+    .line1 p{
+        margin: 0px;
+    }
+
+</style>
+
+<h2>Order History</h2>
+
+<div class='order-container'>
+<% @paid_orders.each do |order| %>
+    <div class='order-card'>
+        <div class='line1'>
+            <h4>Order ID: <%= order.id %></h4>
+            <p>Status: <%= order.status %></p>
+        </div>
+        <div class='line1'>
+            <h4>$<%= order.total_price %></h4>
+        </div>
+        <div class='line1'>
+           <h4><%= link_to order.created_at.strftime('%m/%d/%Y'), order_path(order) %></h4>
+        </div>
+    </div> 
+    <% end %>
+</div>
+
+
+<br><br><br><br><br><br><br><br>
