--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -38,7 +38,7 @@
     transition-duration: 0.3s;
     transition-property: transform;
     position: absolute;
-    right: 6%;
+    right: 0px;
     z-index: 1;
 }
 
