--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -40,13 +40,11 @@
 .btn-flat {
   padding: 8px 24px;
   border-radius: 4px;
-  background: #33903f;
+  background: #384D48;
   transition: 0.3s;
   color: white;
 }
 
 .btn-flat:hover {
-  background: white;
-  color: #33903f;
-  border: 1px solid #33903f;
+  color: white;
 }
