--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
   </div>
   <% end %>
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.01)), url(https://images.unsplash.com/photo-1534073133331-c4b62a557083?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80); height: 95vh;">
-  
+
   <div class="container">
       <h1>The Farmers' <strong>eMarket</strong></h1>
       <p>Order local and fresh ingredients for your restaurant</p>
@@ -44,17 +44,17 @@
     <h1><strong>How it works</strong></h1>
     <div class="steps">
       <div class="step-1">
-        <i class="fas fa-search"></i>
+        <i class="fas fa-search" style="color: #384D48"></i>
         <h3>Search</h3>
         <p>Search local and fresh food by product category or farmer</p>
       </div>
       <div class="step-1">
-        <i class="far fa-hand-pointer"></i>
+        <i class="far fa-hand-pointer" style="color: #384D48"></i>
         <h3>Choose</h3>
         <p>Choose flexible quantities according to your changing needs</p>
       </div>
       <div class="step-1">
-        <i class="fas fa-truck"></i>
+        <i class="fas fa-truck" style="color: #384D48"></i>
         <h3>Delivery</h3>
         <p>Get your products delivered directly to your restaurant</p>
       </div>
