add add-b-f for 6% right

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -31,14 +31,21 @@
     float: right;
     font-size: 27px;
     color: white;
-    // transform: translateZ(0);
-    // box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    // backface-visibility: hidden;
-    // -moz-osx-font-smoothing: grayscale;
     transition-duration: 0.3s;
     transition-property: transform;
     position: absolute;
     right: 0%;
+    z-index: 1;
+}
+.add-b-f {
+    padding: 4px 16px;
+    float: right;
+    font-size: 27px;
+    color: white;
+    transition-duration: 0.3s;
+    transition-property: transform;
+    position: absolute;
+    right: 6%;
     z-index: 1;
 }
 
@@ -51,6 +58,11 @@
     transition-property: transform;
 }
 
+.add-b-f:hover {
+    text-decoration: none;
+    color: white;
+    transform: scale(1.5)
+}
 .add-b-r:hover {
     text-decoration: none;
     color: white;
@@ -58,7 +70,6 @@
 
 
 }
-
 .add-b:hover {
     text-decoration: none;
     color: white;
