--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,18 +1,24 @@
-<h1>Payment for order <%= @order.id %></h1>
+<h1>Payment for Order ID: <%= @order.id %></h1>
+
+<div class=order-form>
 <%= form_tag order_payments_path(@order) do %>
-  <article>
-    <label class="amount">
-      <span>Amount: <%= humanized_money_with_symbol(@order.total_price) %></span>
-    </label>
-  </article>
-
-
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-    data-name="My Product"
-    data-email="<%= current_user.email %>"
-    data-description="Order <%= @order.id %>"
-    data-amount="<%= @order.total_price_cents %>"
-    data-currency="<%= @order.total_price.currency %>"></script>
-  -->
-<% end %>
+      <% @order.order_products.each do |order_product| %>
+      <label class="amount">
+        <p><%= order_product.product.name %></p> 
+        <p>$<%= order_product.product.price %></p>
+      </label>
+      <% end %>
+        <h3>Total amount: <%= humanized_money_with_symbol(@order.total_price) %></h3>
+ 
+  <div class=strip-btn>
+    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+      data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+      data-name="My Product"
+      data-email="<%= current_user.email %>"
+      data-description="Order <%= @order.id %>"
+      data-amount="<%= @order.total_price_cents %>"
+      data-currency="<%= @order.total_price.currency %>"></script>
+    
+  <% end %>
+  </div>
+</div>
