fixed simple form

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,8 +1,9 @@
 .profile-background {
   overflow: hidden;
-  background: white;
+  background: #f9f9f9;
   height: 700px;
   width: 100%;
+  
 }
 
 .profile-background > img {
