--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,17 +8,17 @@
     </div>
 
     <div>
-        <div class="cards-container row">
-            <%= simple_form_for :query, url: products_path, method: :get do |f| %>
-            <div class="d-flex justify-content-between">
-              <div class="d-flex mr-4">
-                <%= f.input :text, label: "Search", placeholder: "Product or category", input_html: { value: params[:query].try(:[], :text) } %>
-                <%= f.input :price, label: "Price", collection: ['No filter', 'Ascending', 'Descending'], selected: params[:query].try(:[], :price)  %>
+        <div class="cards-container">
+           <%= simple_form_for :query, url: products_path, method: :get do |f| %>
+            <div class="d-flex filter">
+              <div class="filter-input d-flex mr-4">
+                <%= f.input :text, label: "Search", required: false, placeholder: "Product or category", input_html: { value: params[:query].try(:[], :text)}, wrapper_html: { class: 'input-price' }%>
+                <%= f.input :price, label: "Price", required: false, collection: ['No filter', 'Ascending', 'Descending'], selected: params[:query].try(:[], :price), wrapper_html: { class: 'input-price' }  %>
                 <%#= f.input :distance, label: "Distance", collection: ['< 5km', '5-10km', '10-20km', '20-50km'], selected: params[:query].try(:[], :distance)  %>
                 <%= f.input :category, as: :hidden, input_html: { value: params[:query].try(:[], :category) } %>
               </div>
               <div>
-                <%= f.submit "Search", class: "btn-f-d" %>
+                <%= f.button :submit, "Search", class: "btn-f-d" %>
               </div>
             </div>
             <% end %>
