--- a/app/views/orders/my_orders.html.erb
+++ b/app/views/orders/my_orders.html.erb
@@ -1,4 +1,4 @@
-<h2>Order History</h2>
+<h2 style='margin-top: 50px;'>Order History</h2>
 
 <div class='order-container'>
 <% @paid_orders.each do |order| %>
