--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,3 +1,23 @@
+<style>
+  form {
+    padding: 50px;
+    border: 1px solid grey;
+  }
+
+  label {
+    width: 250px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  h1{
+    text-align: center;
+    margin-top: 50px;
+  }
+
+
+</style>
+
 <h1>Payment for Order ID: <%= @order.id %></h1>
 
 <div class=order-form>
