fixed front end bugs

--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -68,6 +68,11 @@
     text-decoration: none;  
     color:green;
 }
+
+.category h3 {
+    text-align: left;
+}
+
 //media queries
 
 @media (max-width: 4000px) {
