--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -34,8 +34,8 @@
 <table>
   <thead>
     <tr>
-      <td style='text-align: left; width: 600px; font-weight: bold; border-left: 1px solid #384D48;'>Item(s) Purchased</td>
-      <td style='text-align: center; font-weight: bold'>Farmer</td>
+      <td style='text-align: left; width: 500px; font-weight: bold; border-left: 1px solid #384D48;'>Item(s) Purchased</td>
+      <td style='text-align: center; width: 200px; font-weight: bold'>Farmer</td>
       <td style='text-align: center; font-weight: bold'>Price</td>
       <td style='text-align: center; font-weight: bold'>Quantity</td>
       <td style='text-align: right; font-weight: bold; border-right: 1px solid #384D48;'>Total</td>
