--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -109,12 +109,12 @@
 
 
 
-<section id="footer-f" class="footer-f">
-  <div class="social-media">
-    <ul>
-      <li><i class="fab fa-facebook-f"></i></li>
-      <li><i class="fab fa-twitter"></i></li>
-      <li><i class="fab fa-instagram"></i></li>
+<section id="footer-f" class="footer-f" style='background-color: #384D48; margin: 0 auto;'>
+  <div class="social-media" style='width: 300px; margin: 0 auto; padding: 10px 0'>
+    <ul style='padding: 5px 0'>
+      <li style='display: inline; font-size: 40px; padding: 0 20px; color: white'><i class="fab fa-facebook-f"></i></li>
+      <li style='display: inline; font-size: 40px; padding: 0 20px; color: white'><i class="fab fa-twitter"></i></li>
+      <li style='display: inline; font-size: 40px; padding: 0 20px; color: white'><i class="fab fa-instagram"></i></li>
     </ul>
   </div>
 </section>
